--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "getenv": "^1.0.0"
+    "getenv": "^1.0.0",
+    "request": "^2.88.2"
   }
 }
