--- a/web-server/package.json
+++ b/web-server/package.json
@@ -15,6 +15,7 @@
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
+    "nodemon": "^2.0.6",
     "prettier": "^2.2.1"
   },
   "dependencies": {
