--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -12,6 +12,7 @@
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-promise": "^4.2.1",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1"
   },
