--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -3,7 +3,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "getenv": "^1.0.0",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.8",
+    "validator": "^13.5.2"
   },
   "name": "task-manager",
   "version": "1.0.0",
@@ -19,7 +21,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./mongodb.js -e js,hbs",
-    "start": "node mongodb.js"
+    "start": "node src/db/mongoose.js"
   },
   "author": "",
   "license": "ISC",
