Added correct casing for env var

--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -27,7 +27,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "yarn run drop-collections && nodemon src/index.js -e js,hbs",
     "drop-collections": "node src/util/dropCollections.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "deploy": "cd .. && git subtree push --prefix task-manager heroku-task main"
   },
   "author": "",
   "license": "ISC",
