--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -18,16 +18,23 @@
   "devDependencies": {
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-promise": "^4.2.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "supertest": "^6.0.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "yarn run drop-collections && nodemon src/index.js -e js,hbs",
+    "test": "jest --watch",
+    "dev": "yarn run drop-collections && NODE_ENV=development nodemon src/index.js -e js,hbs",
+    "dev:prodDB": "NODE_ENV=development MODE=prodDB nodemon src/index.js -e js,hbs",
     "drop-collections": "node src/util/dropCollections.js",
-    "start": "node src/index.js",
+    "start": "NODE_ENV=production node src/index.js",
     "deploy": "cd .. && git subtree push --prefix task-manager heroku-task main",
     "heroku:config": "heroku config --remote heroku-task",
     "heroku:logs": "heroku logs --tail --remote heroku-task"
