--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -18,7 +18,6 @@
   "devDependencies": {
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-promise": "^4.2.1",
     "jest": "^26.6.3",
@@ -30,7 +29,7 @@
     "testEnvironment": "node"
   },
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest --watch --runInBand",
     "dev": "yarn run drop-collections && NODE_ENV=development nodemon src/index.js -e js,hbs",
     "dev:prodDB": "NODE_ENV=development MODE=prodDB nodemon src/index.js -e js,hbs",
     "drop-collections": "node src/util/dropCollections.js",
