--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -10,6 +10,7 @@
     "mongoose": "^5.11.8",
     "multer": "^1.4.2",
     "sharp": "^0.27.0",
+    "socket.io": "^3.0.4",
     "validator": "^13.5.2"
   },
   "name": "task-manager",
@@ -30,6 +31,7 @@
   },
   "scripts": {
     "test": "jest --watch --runInBand",
+    "lint": "eslint --fix",
     "dev": "NODE_ENV=development nodemon src/index.js -e js,hbs",
     "dev:prodDB": "NODE_ENV=development MODE=prodDB nodemon src/index.js -e js,hbs",
     "drop-collections": "node src/util/dropCollections.js",
